--- a/EShop-Microservices/Services/Catalog/Catalog.API/Dockerfile.original
+++ b/EShop-Microservices/Services/Catalog/Catalog.API/Dockerfile.original
@@ -12,11 +12,10 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["Services/Catalog/Catalog.API/Catalog.API.csproj", "Services/Catalog/Catalog.API/"]
-COPY ["BuildingBlocks/BuildingBlocks.csproj", "BuildingBlocks/"]
-RUN dotnet restore "./Services/Catalog/Catalog.API/Catalog.API.csproj"
+COPY ["Catalog.API.csproj", "."]
+RUN dotnet restore "./Catalog.API.csproj"
 COPY . .
-WORKDIR "/src/Services/Catalog/Catalog.API"
+WORKDIR "/src/."
 RUN dotnet build "./Catalog.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 # Esta fase é usada para publicar o projeto de serviço a ser copiado para a fase final
