--- a/EShop-Microservices/Services/Basket/Basket.API/appsettings.json
+++ b/EShop-Microservices/Services/Basket/Basket.API/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DataBase": "Server=localhost;Port=5434;Database=BasketDb;User Id=postgres;Password=postgres;Include Error Detail=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
